--- a/acnh-scrapper.ipynb
+++ b/acnh-scrapper.ipynb
@@ -45,7 +45,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: You are using pip version 22.0.3; however, version 22.0.4 is available.\n",
+      "You should consider upgrading via the '/Users/there/opt/anaconda3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install selenium --quiet"
    ]
@@ -59,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/there/Desktop/acnh-scrapper'"
+       "'/Users/there/Desktop/Projects/acnh-scrapper'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -139,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -224,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -273,14 +282,16 @@
     "    tiers_dict_list = get_tiers(acnh_doc)\n",
     "    \n",
     "    acnh_villagers_df = concat_tiers(tiers_dict_list)\n",
-    "    \n",
+    "    tier = acnh_villagers_df.pop('tier')\n",
+    "    acnh_villagers_df.insert(1, \"tier\", tier)\n",
+    "    acnh_villagers_df.sort_values([\"tier\", \"rank\"], ascending=[True, True])\n",
     "    acnh_villagers_df.to_csv(path+\"/acnh_villager_data.csv\", index=None)\n",
     "    return acnh_villagers_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -305,40 +316,40 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>rank</th>\n",
-       "      <th>name</th>\n",
        "      <th>tier</th>\n",
+       "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Raymond</td>\n",
        "      <td>1</td>\n",
+       "      <td>Raymond</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>Marshal</td>\n",
        "      <td>1</td>\n",
+       "      <td>Marshal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Shino</td>\n",
        "      <td>1</td>\n",
+       "      <td>Shino</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Sherb</td>\n",
        "      <td>1</td>\n",
+       "      <td>Sherb</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>Sasha</td>\n",
        "      <td>1</td>\n",
+       "      <td>Sasha</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -349,32 +360,32 @@
        "    <tr>\n",
        "      <th>158</th>\n",
        "      <td>159</td>\n",
-       "      <td>Rocco</td>\n",
        "      <td>6</td>\n",
+       "      <td>Rocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159</th>\n",
        "      <td>160</td>\n",
-       "      <td>Bettina</td>\n",
        "      <td>6</td>\n",
+       "      <td>Bettina</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160</th>\n",
        "      <td>161</td>\n",
-       "      <td>Boris</td>\n",
        "      <td>6</td>\n",
+       "      <td>Boris</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161</th>\n",
        "      <td>162</td>\n",
-       "      <td>Bitty</td>\n",
        "      <td>6</td>\n",
+       "      <td>Bitty</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>162</th>\n",
        "      <td>163</td>\n",
-       "      <td>Velma</td>\n",
        "      <td>6</td>\n",
+       "      <td>Velma</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -382,23 +393,23 @@
        "</div>"
       ],
       "text/plain": [
-       "    rank     name  tier\n",
-       "0      1  Raymond     1\n",
-       "1      2  Marshal     1\n",
-       "2      3    Shino     1\n",
-       "3      4    Sherb     1\n",
-       "4      5    Sasha     1\n",
-       "..   ...      ...   ...\n",
-       "158  159    Rocco     6\n",
-       "159  160  Bettina     6\n",
-       "160  161    Boris     6\n",
-       "161  162    Bitty     6\n",
-       "162  163    Velma     6\n",
+       "    rank  tier     name\n",
+       "0      1     1  Raymond\n",
+       "1      2     1  Marshal\n",
+       "2      3     1    Shino\n",
+       "3      4     1    Sherb\n",
+       "4      5     1    Sasha\n",
+       "..   ...   ...      ...\n",
+       "158  159     6    Rocco\n",
+       "159  160     6  Bettina\n",
+       "160  161     6    Boris\n",
+       "161  162     6    Bitty\n",
+       "162  163     6    Velma\n",
        "\n",
        "[413 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
