--- a/acnh-scrapper.ipynb
+++ b/acnh-scrapper.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -283,7 +283,7 @@
     "    \n",
     "    acnh_villagers_df = concat_tiers(tiers_dict_list)\n",
     "    tier = acnh_villagers_df.pop('tier')\n",
-    "    acnh_villagers_df.insert(1, \"tier\", tier)\n",
+    "    acnh_villagers_df.insert(0, \"tier\", tier)\n",
     "    acnh_villagers_df.sort_values([\"tier\", \"rank\"], ascending=[True, True])\n",
     "    acnh_villagers_df.to_csv(path+\"/acnh_villager_data.csv\", index=None)\n",
     "    return acnh_villagers_df"
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +315,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>rank</th>\n",
        "      <th>tier</th>\n",
+       "      <th>rank</th>\n",
        "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -329,26 +329,26 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>Marshal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>Shino</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>Sherb</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>Sasha</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -359,32 +359,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>158</th>\n",
-       "      <td>159</td>\n",
        "      <td>6</td>\n",
+       "      <td>159</td>\n",
        "      <td>Rocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159</th>\n",
-       "      <td>160</td>\n",
        "      <td>6</td>\n",
+       "      <td>160</td>\n",
        "      <td>Bettina</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160</th>\n",
-       "      <td>161</td>\n",
        "      <td>6</td>\n",
+       "      <td>161</td>\n",
        "      <td>Boris</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161</th>\n",
-       "      <td>162</td>\n",
        "      <td>6</td>\n",
+       "      <td>162</td>\n",
        "      <td>Bitty</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>162</th>\n",
-       "      <td>163</td>\n",
        "      <td>6</td>\n",
+       "      <td>163</td>\n",
        "      <td>Velma</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -393,23 +393,23 @@
        "</div>"
       ],
       "text/plain": [
-       "    rank  tier     name\n",
-       "0      1     1  Raymond\n",
-       "1      2     1  Marshal\n",
-       "2      3     1    Shino\n",
-       "3      4     1    Sherb\n",
-       "4      5     1    Sasha\n",
-       "..   ...   ...      ...\n",
-       "158  159     6    Rocco\n",
-       "159  160     6  Bettina\n",
-       "160  161     6    Boris\n",
-       "161  162     6    Bitty\n",
-       "162  163     6    Velma\n",
+       "     tier rank     name\n",
+       "0       1    1  Raymond\n",
+       "1       1    2  Marshal\n",
+       "2       1    3    Shino\n",
+       "3       1    4    Sherb\n",
+       "4       1    5    Sasha\n",
+       "..    ...  ...      ...\n",
+       "158     6  159    Rocco\n",
+       "159     6  160  Bettina\n",
+       "160     6  161    Boris\n",
+       "161     6  162    Bitty\n",
+       "162     6  163    Velma\n",
        "\n",
        "[413 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
